5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1834_1274.log
== SUBMITION (2019-06-25 16:09:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = int(input("Valor de N: "))

matriz = zeros(N.N)

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min[i,j] + 1
		
print(matriz)
		
-- EXECUTION TIME:
1.20507
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1274/main.py", line 6, in <module>
    matriz = zeros(N.N)
AttributeError: 'int' object has no attribute 'N'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:09:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = int(input("Valor de N: "))

matriz = zeros(N.N)

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min[i,j] + 1
		
print(matriz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:10:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = int(input("Valor de N: "))

matriz = zeros((N,N), dtype=int)

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min[i,j] + 1
		
print(matriz)
		
-- EXECUTION TIME:
1.21699
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1274/main.py", line 10, in <module>
    matriz[i,j] = min[i,j] + 1
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:11:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = int(input("Valor de N: "))

matriz = zeros((N,N), dtype=int))

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min[i,j] + 1
		
print(matriz)
		
-- EXECUTION TIME:
0.681181
-- ERROR:
  File "/home/codebench/codes/1834/1274/main.py", line 6
    matriz = zeros((N,N), dtype=int))
                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:11:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = int(input("Valor de N: "))

matriz = zeros((N,N), dtype=int)

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min[i,j] + 1
		
print(matriz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:12:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
from math import *

N = int(input("Valor de N: "))

matriz = zeros((N,N), dtype=int)

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min[i,j] + 1
		
print(matriz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:13:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
from math import *

N = int(input("Valor de N: "))

matriz = zeros((N,N), dtype=int)

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min(i,j) + 1
		
print(matriz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:13:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
from math import *

N = int(input("Valor de N: "))

matriz = zeros((N,N), dtype=int)

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min(i,j) + 1
		
print(matriz)
		
-- EXECUTION TIME:
1.17617
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:14:30) 
-- CODE:
from numpy import *
#from numpy.linalg import *
#from math import *

N = int(input("Valor de N: "))

matriz = zeros((N,N), dtype=int)

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min(i,j) + 1
		
print(matriz)
		
-- EXECUTION TIME:
1.28652
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:14:32) 
-- CODE:
from numpy import *
#from numpy.linalg import *
#from math import *

N = int(input("Valor de N: "))

matriz = zeros((N,N), dtype=int)

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min(i,j) + 1
		
print(matriz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:14:42) 
-- CODE:
from numpy import *
#from numpy.linalg import *
#from math import *

N = int(input("Valor de N: "))

matriz = zeros((N,N), dtype=int)

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min(i,j) + 1
		
print(matriz)
		
-- EXECUTION TIME:
1.13133
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 04:37:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = int(input("Valor de N: "))

matriz = zeros((N,N), dtype=int)

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min(matriz) + 1
		
print(matriz)
-- EXECUTION TIME:
1.19025
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1274/main.py", line 10, in <module>
    matriz[i,j] = min(matriz) + 1
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 04:41:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = int(input("Valor de N: "))

matriz = zeros((N,N), dtype=int)

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min(i,j) + 1
		
print(matriz)
-- EXECUTION TIME:
1.16535
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:25:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = int(input("Valor de N: "))

matriz = zeros((N,N), dtype=int)

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min(i,j) + 1
		
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:25:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

N = int(input("Valor de N: "))

matriz = zeros((N,N), dtype=int)

for i in range (0,N):
	for j in range (0,N):
		matriz[i,j] = min(i,j) + 1
		
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
